2022-11-22T00:31:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3519280998 # 644
* notice: last 14d: unq all: 10 5776
* notice: prev accum: outdated-unq outdated-all / unq all: 1215 87338 / 1247 93054
* notice: next accum: outdated-unq outdated-all / unq all: 1216 87748 / 1248 93524
* notice: prev exec diff / last date diff / accum: unq all: +1 +149 -0 -22 / +2 +412 -0 -0 / 2 412
* notice: removed / changed dates: [2022-11-07] / [2022-11-08 2022-11-21]

2022-11-21T16:06:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3516071477 # 643
* notice: last 14d: unq all: 10 5716
* notice: prev accum: outdated-unq outdated-all / unq all: 1215 87338 / 1247 93078
* notice: next accum: outdated-unq outdated-all / unq all: 1215 87338 / 1247 93054
* notice: prev exec diff / last date diff / accum: unq all: +0 +122 -0 -146 / +1 +263 -0 -0 / 1 263
* notice: removed / changed dates: [] / [2022-11-07 2022-11-21]

2022-11-21T08:07:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3512551007 # 642
* notice: last 14d: unq all: 10 5740
* notice: prev accum: outdated-unq outdated-all / unq all: 1215 87338 / 1246 93111
* notice: next accum: outdated-unq outdated-all / unq all: 1215 87338 / 1247 93078
* notice: prev exec diff / last date diff / accum: unq all: +1 +141 -0 -174 / +1 +141 -0 -0 / 1 141
* notice: removed / changed dates: [] / [2022-11-07 2022-11-21]

2022-11-21T00:31:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3510475381 # 641
* notice: last 14d: unq all: 10 5773
* notice: prev accum: outdated-unq outdated-all / unq all: 1214 86926 / 1246 92637
* notice: next accum: outdated-unq outdated-all / unq all: 1215 87338 / 1246 93111
* notice: prev exec diff / last date diff / accum: unq all: +0 +152 -0 -23 / +2 +417 -0 -0 / 2 417