@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-22T00:31:11Z",
-  "count" : 394,
+  "timestamp" : "2022-11-22T08:08:01Z",
+  "count" : 219,
   "count_minmax" : [ 141, 416 ],
-  "count_decinc" : [ -22, +416 ],
+  "count_decinc" : [ -197, +416 ],
   "uniques" : 5,
   "uniques_minmax" : [ 1, 5 ],
   "uniques_decinc" : [ -0, +5 ]
