@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-22T00:31:11Z",
+  "timestamp" : "2022-11-22T08:08:01Z",
   "count_outdated" : 87748,
   "uniques_outdated" : 1216,
-  "count" : 93524,
-  "uniques" : 1248,
+  "count" : 93493,
+  "uniques" : 1249,
   "clones" : [
     {
       "timestamp": "2022-11-08T00:00:00Z",
-      "count": 394,
+      "count": 219,
       "count_minmax": [ 141, 416 ],
       "uniques": 5,
       "uniques_minmax": [ 1, 5 ]
@@ -98,10 +98,17 @@
     },
     {
       "timestamp": "2022-11-21T00:00:00Z",
-      "count": 412,
-      "count_minmax": [ 141, 412 ],
+      "count": 414,
+      "count_minmax": [ 141, 414 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-11-22T00:00:00Z",
+      "count": 142,
+      "count_minmax": [ 142, 142 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
