@@ -1,10 +1,10 @@
 {
-  "count": 5776,
+  "count": 5745,
   "uniques": 10,
   "clones": [
     {
       "timestamp": "2022-11-08T00:00:00Z",
-      "count": 394,
+      "count": 219,
       "uniques": 5
     },
     {
@@ -69,8 +69,13 @@
     },
     {
       "timestamp": "2022-11-21T00:00:00Z",
-      "count": 412,
+      "count": 414,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-11-22T00:00:00Z",
+      "count": 142,
+      "uniques": 1
     }
   ]
 }
