@@ -1,3 +1,11 @@
+2022-11-22T08:08:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3521496558 # 645
+* notice: last 14d: unq all: 10 5745
+* notice: prev accum: outdated-unq outdated-all / unq all: 1216 87748 / 1248 93524
+* notice: next accum: outdated-unq outdated-all / unq all: 1216 87748 / 1249 93493
+* notice: prev exec diff / last date diff / accum: unq all: +1 +144 -0 -175 / +1 +142 -0 -0 / 1 142
+* notice: removed / changed dates: [] / [2022-11-08 2022-11-21 2022-11-22]
+
 2022-11-22T00:31:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3519280998 # 644
 * notice: last 14d: unq all: 10 5776
